--- a/navbar.html
+++ b/navbar.html
@@ -14,7 +14,7 @@
         </div>
         <div class="right">
             <button>Our Game</button>
-            <button>About Us</button>
+            <button><a href="aboutus.html">About Us</a></button>
             <button>???</button>
             <button class="login-button">Login</button>
             <img src="src/img/Question_mark_(black).svg.png" alt="user-login">
