--- a/navbar.html
+++ b/navbar.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css/styles.css">
     <title>Document</title>
 </head>
 <body>
     <div class="navbar">
         <div class="left">
-            <img src="src/img/redhook_logo+copy (1).jpg" alt="Red Hook Logo">
+            <img src="assets/img/" alt="Red Hook Logo">
             <button>RED HOOK</button>
         </div>
         <div class="right">
@@ -17,7 +17,7 @@
             <button><a href="aboutus.html">About Us</a></button>
             <button>???</button>
             <button class="login-button">Login</button>
-            <img src="src/img/Question_mark_(black).svg.png" alt="user-login">
+            <img src="assets/img/Question_mark_(black).svg.png" alt="user-login">
         </div>
 </body>
 </html>
