--- a/navbar.html
+++ b/navbar.html
@@ -4,20 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <div class="navbar">
-        <div class="left">
-            <img src="assets/img/" alt="Red Hook Logo">
-            <button>RED HOOK</button>
+    <nav class="navbar navbar-expand-lg fixed-top bg-light navbar-light">
+        <div class="container">
+          <a class="navbar-brand" href="#"
+            ><img
+              id="RH-logo"
+              src="assets/img/redhook_logo+copy (1).jpg"
+              alt="logo"
+              draggable="false"
+              height="100"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-mdb-toggle="collapse"
+            data-mdb-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto align-items-center">
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#!"><i class="fas fa-plus-circle pe-2"></i>Our Game</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#!"><i class="fas fa-bell pe-2"></i>About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#!"><i class="fas fa-heart pe-2"></i>????</a>
+              </li>
+              <li class="nav-item ms-3">
+                <a class="btn btn-black btn-rounded" href="#!">Sign in</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="right">
-            <button>Our Game</button>
-            <button><a href="aboutus.html">About Us</a></button>
-            <button>???</button>
-            <button class="login-button">Login</button>
-            <img src="assets/img/Question_mark_(black).svg.png" alt="user-login">
-        </div>
+      </nav>
 </body>
 </html>
