--- a/présentation.html
+++ b/présentation.html
@@ -55,7 +55,9 @@
 
                 Si la barre de stress se remplit une deuxième fois, le héros peut faire une crise cardiaque ce qui le
                 rend extrêmement vulnérable aux attaques ennemies. En cas de seconde crise cardiaque, si le héros n'a
-                pas été soigné des conséquences de la première, il meurt.</p>
+                pas été soigné des conséquences de la première, il meurt.
+                <img class="stress-fail" src="assets\img\stress fail.jpg">
+            </p>
 
             <p>Lors de l'exploration, le niveau de luminosité joue un rôle important, une faible luminosité augmente le
                 stress des héros en marchant et la probabilité d'être surpris par les ennemis, dans ce cas tous les
