--- a/présentation.html
+++ b/présentation.html
@@ -43,7 +43,7 @@
                 sauvegardes automatiques effectuées régulièrement empêchent le joueur de charger un point de sauvegarde
                 précédent pour retrouver son héros.</p>
             <br>
-            <img class="dd-combat" src="assets\img\dd-combat.jpg">
+            <img class="dd-combat" src="assets/img/dd-combat.jpg">
 
             <p>L'une des principales composantes de Darkest Dungeon est le système de stress, qui représente la peur
                 ressentie par le héros alors qu'il parcourt le donjon. Chaque héros a une barre de stress qui se remplit
@@ -59,7 +59,7 @@
                 rend extrêmement vulnérable aux attaques ennemies. En cas de seconde crise cardiaque, si le héros n'a
                 pas été soigné des conséquences de la première, il meurt.
                 <br>
-                <img class="stress-fail" src="assets\img\stress fail.jpg">
+                <img class="stress-fail" src="assets/img/stress fail.jpg">
             </p>
 
             <p>Lors de l'exploration, le niveau de luminosité joue un rôle important, une faible luminosité augmente le
@@ -77,6 +77,8 @@
                 exemple pour réduire le stress ou gagner des trésors. La nourriture nécessaire au bivouac doit aussi
                 être achetée à l'avance, partir à l'aventure a donc un coût de départ qu'il faudra optimiser selon ses
                 ressources et les perspectives de gains.</p>
+                <img class="dd-shop" src="assets/img/dd-shop.jpg">
+
 
             <p>Dans la phase du bivouac, le joueur peut recruter de nouveaux héros, améliorer leurs capacités et leur
                 équipement. Il peut aussi soigner les affections des héros. Le niveau de stress de chaque héros est
@@ -91,11 +93,11 @@
                 peuvent être améliorés pour accepter plusieurs héros simultanément. Il peut arriver qu'un bonus ou un
                 malus s'ajoute en réaction au soin du stress, par exemple un héros qui prie peut avoir une révélation
                 qui déclenche une manie. Certains héros ont des affections qui leur interdisent certains soins du
-                stress, par exemple être interdit de jeu en ville.
-                <br>
-                <img class="dd-hamlet" src="assets\img\dd-hamlet.jpg">
+                stress, par exemple être interdit de jeu en ville.</p>
+            <br>
+            <img class="dd-hamlet" src="assets/img/dd-hamlet.jpg">
 
-                Un bâtiment permet de soigner les manies des héros ainsi que les maladies contractées dans un donjon,
+            <p>Un bâtiment permet de soigner les manies des héros ainsi que les maladies contractées dans un donjon,
                 mais ces soins sont coûteux. Un autre permet de débloquer et d'améliorer les capacités des héros.
 
                 De nouveaux héros sont disponibles à chaque phase du hameau, ce qui permet de recruter d'autres héros
@@ -104,8 +106,6 @@
                 donjons plus avancés nécessitent des héros avec des niveaux plus élevés, un héros de niveau élevé peut
                 être difficile à remplacer et les héros plus avancés refuseront de faire des petits donjons avec des
                 héros moins expérimentés.
-                <br>
-                <img class="dd-recuits" src="assets\img\dd-recuits.jpg">
 
                 Tous les bâtiments sont améliorables avec des ressources spéciales gagnés dans les donjons. Le nombre
                 maximum de héros recrutés peut être augmenté de la même manière.
@@ -118,58 +118,89 @@
         </div>
 
         <div class="paragraphe-3">
+            <div>
+                <h2>Le Croisé</h2>
+                <br>
+                <img class="Crusader" src="assets/img/Crusader.webp">
 
-            <img class="Crusader" src="assets\img\Crusader.jpg">
+                <p>Le Croisé est un peu le couteau suisse de Darkest Dungeon. Aussi efficace en DPS qu'en support, sa
+                    panoplie de compétences lui permet d'être à l'aise dans tous les cas de figure, notamment grâce à
+                    une
+                    technique de soin collectif et des buffs régénérant la torche. Il est également l'une des premières
+                    classes du jeu que vous aurez l'occasion de contrôler avec le Bandit dans le tutoriel du jeu. Le
+                    seul
+                    moment où le Croisé brille par ses dégâts et son impact sur le déroulé d'une quête, c'est toutes les
+                    explorations qui concerneront les ruines, car il dispose de dégâts supplémentaires natifs sur ses
+                    compétences face aux ennemis de type "Impie", notamment les squelettes. En dehors de ça, le Croisé
+                    fera
+                    le job si vous l'utilisez comme un tank, comme un DPS ou bien en tant que support, mais gardez à
+                    l'esprit qu'il existera toujours une classe supérieure à lui dans l'un des 3 axes cités.
+                </p>
+                
+            </div>
+            <br>
+            <div>
+                <h2>Le Bandit</h2>
+                <img class="HighwayMan" src="assets/img/HighwayMan.webp">
 
-            <p>Le Croisé est un peu le couteau suisse de Darkest Dungeon. Aussi efficace en DPS qu'en support, sa
-                panoplie de compétences lui permet d'être à l'aise dans tous les cas de figure, notamment grâce à une
-                technique de soin collectif et des buffs régénérant la torche. Il est également l'une des premières
-                classes du jeu que vous aurez l'occasion de contrôler avec le Bandit dans le tutoriel du jeu. Le seul
-                moment où le Croisé brille par ses dégâts et son impact sur le déroulé d'une quête, c'est toutes les
-                explorations qui concerneront les ruines, car il dispose de dégâts supplémentaires natifs sur ses
-                compétences face aux ennemis de type "Impie", notamment les squelettes. En dehors de ça, le Croisé fera
-                le job si vous l'utilisez comme un tank, comme un DPS ou bien en tant que support, mais gardez à
-                l'esprit qu'il existera toujours une classe supérieure à lui dans l'un des 3 axes cités.
-            </p>
+                <p>Le Bandit est l'un des deux personnages que le jeu vous donne au début de votre partie avec le
+                    Croisé.
+                    C'est le premier personnage de type DPS avec lequel vous allez apprendre les bases du jeu et il se
+                    trouve être un héros qui excelle dans les attaques à distance en plus d'être solide au niveau de son
+                    kit
+                    de compétences. Il existe deux possibilités pour jouer le Bandit dans Darkest Dungeon, la première
+                    étant
+                    bien entendu de le spécialiser sur le combat à distance en privilégiant ses compétences "Tir de
+                    pistolet", "Mitraille" et "Tir de pistage". La seconde sera plus orientée sur un style de jeu
+                    hybride
+                    avec une ou deux compétences au corps-à-corps comme "Ouvre-veine" et "Entaille vicieuse".
+                </p>
+            </div>
+            <br>
+            <div>
+                <h2>La Vestale</h2>
+                <br>
+                <img class="Vestal" src="assets/img/Vestal.webp">
 
-            <img class="HighwayMan" src="assets\img\HighwayMan.jpg">
+                <p>La Vestale est la soigneuse attitrée de votre, lors de vos premiers pas dans Darkest Dungeon, il est
+                    quasiment obligatoire d'en avoir une dans votre formation. Elle est capable de proférer des soins
+                    conséquents sur une cible, ou même de redonner quelques points de vie au groupe entier, très
+                    pratique
+                    lorsque plusieurs membres sont en situation délicate à 0HP.
+                    a Vestale est très certainement la classe qui est la plus jouée et appréciée des joueurs grâce à ses
+                    compétences de soins qui en font un élément très rassurant pour les explorations dans Darkest
+                    Dungeon.
+                    On conseille fortement aux débutants de la privilégier dans vos équipes, avec le Bouffon ils forment
+                    la
+                    paire de sécurité ultime dans le jeu, en position 4 et 3, entre soins de points de vie et soins de
+                    stress. Néanmoins, il est bon de noter que la Vestale ne sait pas que soigner et qu'elle sera aussi
+                    un
+                    atout utilitaire non-négligeable à votre équipe. En effet, elle peut étourdir des cibles tout en
+                    ravivant la flamme de votre torche si vous venez à manquer de lumière dans vos explorations et poser
+                    un
+                    malus sur vos cibles.
+                </p>
+            </div>
+            <br>
+            <div>
+                <h2>Le Docteur de la peste</h2>
+                <br>
+                <img class="PlagueDoctor" src="assets/img/PlagueDoctor.webp">
 
-            <p>Le Bandit est l'un des deux personnages que le jeu vous donne au début de votre partie avec le Croisé.
-                C'est le premier personnage de type DPS avec lequel vous allez apprendre les bases du jeu et il se
-                trouve être un héros qui excelle dans les attaques à distance en plus d'être solide au niveau de son kit
-                de compétences. Il existe deux possibilités pour jouer le Bandit dans Darkest Dungeon, la première étant
-                bien entendu de le spécialiser sur le combat à distance en privilégiant ses compétences "Tir de
-                pistolet", "Mitraille" et "Tir de pistage". La seconde sera plus orientée sur un style de jeu hybride
-                avec une ou deux compétences au corps-à-corps comme "Ouvre-veine" et "Entaille vicieuse".
-            </p>
-
-            <img class="Vestal" src="assets\img\Vestal.jpg">
-            
-            <p>La Vestale est la soigneuse attitrée de votre, lors de vos premiers pas dans Darkest Dungeon, il est
-                quasiment obligatoire d'en avoir une dans votre formation. Elle est capable de proférer des soins
-                conséquents sur une cible, ou même de redonner quelques points de vie au groupe entier, très pratique
-                lorsque plusieurs membres sont en situation délicate à 0HP.
-                a Vestale est très certainement la classe qui est la plus jouée et appréciée des joueurs grâce à ses
-                compétences de soins qui en font un élément très rassurant pour les explorations dans Darkest Dungeon.
-                On conseille fortement aux débutants de la privilégier dans vos équipes, avec le Bouffon ils forment la
-                paire de sécurité ultime dans le jeu, en position 4 et 3, entre soins de points de vie et soins de
-                stress. Néanmoins, il est bon de noter que la Vestale ne sait pas que soigner et qu'elle sera aussi un
-                atout utilitaire non-négligeable à votre équipe. En effet, elle peut étourdir des cibles tout en
-                ravivant la flamme de votre torche si vous venez à manquer de lumière dans vos explorations et poser un
-                malus sur vos cibles.
-            </p>
-
-            <img class="PlagueDoctor" src="assets\img\PlagueDoctor.jpg">
-
-            <p>Le Docteur de la peste préfère se détacher ses ennemis avec une concoction mortelle de poison qui diminue
-                leur santé. Alors qu'elle occupe habituellement les classements de l'arrière 3 ou 4 offrant un soutien
-                et des dommages sur le temps. Elle a deux des trois Étoiles dans le jeu qui peuvent atteindre le rang 4.
-                Cela seule la rend extrêmement puissante, mais elle a aussi une très bonne utilité comme la guérison
-                secondaire et les capacités offensives avec ses poisons.
-                Son ensemble de compétences est incroyablement utile et polyvalent capable d'éliminer tout DoT de
-                lui-même ou de tout autre allié, écueil les back-ranks de la formation ennemie habituellement avant même
-                qu'ils ne puissent même attaquer.
-            </p>
+                <p>Le Docteur de la peste préfère se détacher ses ennemis avec une concoction mortelle de poison qui
+                    diminue
+                    leur santé. Alors qu'elle occupe habituellement les classements de l'arrière 3 ou 4 offrant un
+                    soutien
+                    et des dommages sur le temps. Elle a deux des trois Étoiles dans le jeu qui peuvent atteindre le
+                    rang 4.
+                    Cela seule la rend extrêmement puissante, mais elle a aussi une très bonne utilité comme la guérison
+                    secondaire et les capacités offensives avec ses poisons.
+                    Son ensemble de compétences est incroyablement utile et polyvalent capable d'éliminer tout DoT de
+                    lui-même ou de tout autre allié, écueil les back-ranks de la formation ennemie habituellement avant
+                    même
+                    qu'ils ne puissent même attaquer.
+                </p>
+            </div>
         </div>
     </main>
 
