--- a/aboutus.html
+++ b/aboutus.html
@@ -4,8 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css/styles.css">
 </head>
-<body>
+<body class="about-us-body">
+    <!--CHANGER FONT-->
+    <!--NAVBAR-->
+
+    <!--CARTES-->
+
+
     
+    <h2 class="abt-us">About Us </h2>
+
+
+    <div class="d-flex justify-content-center">
+        <div class="card m-4" style="width: 18rem;">
+            <img src="assets/img/EGS_DarkestDungeon_RedHookStudios_S2-1200x1600-1888311b95f43a3b02df2c452bd4ffee.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h2>Dev1</h2>
+                <p class="card-text">Lorem Ipsum</p>
+            </div>
+        </div>
+        <div class="card m-4" style="width: 18rem;">
+            <img src="assets/img/redhook_logo+copy (1).jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h2>Studio</h2>
+                <p class="card-text">Lorem Ipsum</p>
+            </div>
+        </div>
+        <div class="card m-4" style="width: 18rem;">
+            <img src="assets/img/EGS_DarkestDungeon_RedHookStudios_S2-1200x1600-1888311b95f43a3b02df2c452bd4ffee.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h2>Dev2</h2>
+                <p class="card-text">Lorem Ipsum</p>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="quote">
+    <figure class="text-center">
+        <blockquote class="blockquote">
+          <p>Overconfidence is a slow and insidious killer</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+          Narrator <cite title="Source Title">Darkest Dungeon</cite>
+        </figcaption>
+      </figure>
+    </div>
+
+
+    <!--FOOTER-->
+
 </body>
 </html>
