--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css/styles.css">
+    <title>Landing Page</title>
 </head>
 <body>
-    
+
+    <!--HEADER + NAVBAR!-->
+
+    <div class="card about-game" style="width: 18rem;">
+        <img src="assets/img/Darkest_Dungeon_Logo.png" class="card-img-top" alt="game img">
+        <div class="card-body">
+          <h5 class="card-title">Notre jeu</h5>
+          <p class="card-text">Brève description du jeu</p>
+          <a href="#" class="btn btn-custom">Voir plus</a>
+          <a href="#" class="btn btn-custom">Acheter!</a>
+        </div>
+      </div>
 </body>
 </html>
