--- a/présentation.html
+++ b/présentation.html
@@ -20,10 +20,12 @@
 <body>
 
     <main>
-        <h2>Darkest Dungeon</h2>
-        <br>
-
+        
         <div class="paragraphe-1">
+            <h1>Darkest Dungeon</h1>
+            <br>
+            <img class="dd" src="assets/img/dd.jpg">
+
             <p>Darkest Dungeon est un jeu vidéo de type rogue-like, RPG et dungeon crawler, développé et édité par Red
                 Hook Studios, sorti en 2016 sur Windows, Mac, Linux, PlayStation 4 et PlayStation Vita. Il se
                 caractérise par un univers dark fantasy très noir et une grande difficulté.
@@ -36,6 +38,7 @@
         </div>
 
         <div class="paragraphe-2">
+            <h2>Les mécaniques de jeu</h2>
             <p>le joueur contrôle une équipe de quatre personnages (appelés héros) et parcourt un donjon généré
                 aléatoirement dans le but de remplir une quête (explorer la quasi-totalité des lieux, venir à bout des
                 ennemis présents...). Au cours de l'exploration, le joueur doit mener des batailles qui se déroulent en
@@ -118,6 +121,8 @@
         </div>
 
         <div class="paragraphe-3">
+            <h2>Présentation des premiers personnages</h2>
+            <br>
             <div>
                 <h2>Le Croisé</h2>
                 <br>
