--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
 </head>
 <body class="about-us-body">
     <!--CHANGER FONT-->
-    <!--NAVBAR-->
+    <!--NAVBAR à édit pour qu'elle disparaisse au scroll-->
 
     <!--CARTES-->
 
@@ -30,7 +30,7 @@
             <img src="assets/img/redhook_logo+copy (1).jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h2>Studio</h2>
-                <p class="card-text">Lorem Ipsum</p>
+                <p class="card-text">Red Hook Studio, basé à Vancouver, est un studio indépendant fondé par Chris Bourassa et Tyler Sigman. Ils sont surtout connus pour Darkest Dungeon, un jeu de rôle stratégique et sombre qui a marqué l'industrie par son esthétique gothique et son gameplay exigeant.</p>
             </div>
         </div>
         <div class="card m-4" style="width: 18rem;">
